Fix mistakes with spacing and boldness of font

--- a/frontend/src/app/components/keyresult-detail/keyresult-detail.component.scss
+++ b/frontend/src/app/components/keyresult-detail/keyresult-detail.component.scss
@@ -85,3 +85,7 @@
 .all-checkins-button {
   height: 25px;
 }
+
+.confidence-label {
+  padding: 2px 0 3px 0;
+}
