--- a/frontend/src/style/styles.scss
+++ b/frontend/src/style/styles.scss
@@ -28,7 +28,7 @@ body.okr {
 
   h3 {
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 400;
     word-wrap: anywhere;
     margin-bottom: 0;
   }
